--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=laravel-api
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:t8uhGsEhw7rscpzpWFPPRNMxyQJmRhlWKnwMCzqsA8E=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,8 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel-api-app
+DB_DATABASE=laravel
 DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
